upload recent projects

--- a/index.html
+++ b/index.html
@@ -150,6 +150,52 @@
             </div>
             <div class="projects">
                 <div class="proj_card">
+                    <a href="https://www.zaeemwatches.com">
+                        <div class="proj_con">
+                            <div class="dots">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                            </div>
+                            <div class="proj_img">
+                                <img src="images/zaeemwatches.png" alt="">
+                            </div>
+                            <div class="proj_des">
+                                <div>
+                                    <h2>ZaeemWatches</h2>
+                                    <p>Website Development</p>
+                                </div>
+                                <div>
+                                    <img src="images/circled-up-right.png" alt="" class="arrow">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="proj_card">
+                    <a href="https://www.alitoys.co">
+                        <div class="proj_con">
+                            <div class="dots">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                            </div>
+                            <div class="proj_img">
+                                <img src="images/alitoys.png" alt="">
+                            </div>
+                            <div class="proj_des">
+                                <div>
+                                    <h2>Alitoys</h2>
+                                    <p>Website Development</p>
+                                </div>
+                                <div>
+                                    <img src="images/circled-up-right.png" alt="" class="arrow">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="proj_card">
                     <a href="https://www.strategykiln.com">
                         <div class="proj_con">
                             <div class="dots">
@@ -195,50 +241,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="proj_card">
-                    <div class="proj_con">
-                        <div class="dots">
-                            <div class="dot"></div>
-                            <div class="dot"></div>
-                            <div class="dot"></div>
-                        </div>
-                        <div class="proj_img">
-                            <img src="images/dkc-mockup.png" alt="">
-                        </div>
-                        <div class="proj_des">
-                            <div>
-                                <h2>Deep Kitchen Clean</h2>
-                                <p>Website Development</p>
-                            </div>
-                            <div>
-                                <img src="images/circled-up-right.png" alt="" class="arrow">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="proj_card">
-                    <a href="https://iroha.demo.velocicoding.com">
-                        <div class="proj_con">
-                            <div class="dots">
-                                <div class="dot"></div>
-                                <div class="dot"></div>
-                                <div class="dot"></div>
-                            </div>
-                            <div class="proj_img">
-                                <img src="images/iroha-mockup.png" alt="">
-                            </div>
-                            <div class="proj_des">
-                                <div>
-                                    <h2>Iroha</h2>
-                                    <p>Website Development</p>
-                                </div>
-                                <div>
-                                    <img src="images/circled-up-right.png" alt="" class="arrow">
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+                
             </div>
             <div class="button">
                 <a href="projects.html"><button class="hero_button">View All Projects</button></a>
@@ -259,7 +262,7 @@
             </div>
             <div class="about_info">
                 <div class="my_img">
-                    <img src="images/Portfolio Mockups Design (5).png" alt="">
+                    <img src="images/about-pic.jpg" alt="">
                 </div>
                 <div class="my_info">
                     <h1>Muhammad Sarim</h1>
