--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,75 @@
             </div>
             <div class="projects">
                 <div class="proj_card">
+                    <a href="https://www.zaeemwatches.com">
+                        <div class="proj_con">
+                            <div class="dots">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                            </div>
+                            <div class="proj_img">
+                                <img src="images/zaeemwatches.png" alt="">
+                            </div>
+                            <div class="proj_des">
+                                <div>
+                                    <h2>ZaeemWatches</h2>
+                                    <p>Website Development</p>
+                                </div>
+                                <div>
+                                    <img src="images/circled-up-right.png" alt="" class="arrow">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="proj_card">
+                    <a href="https://www.alitoys.co">
+                        <div class="proj_con">
+                            <div class="dots">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                            </div>
+                            <div class="proj_img">
+                                <img src="images/alitoys.png" alt="">
+                            </div>
+                            <div class="proj_des">
+                                <div>
+                                    <h2>Alitoys</h2>
+                                    <p>Website Development</p>
+                                </div>
+                                <div>
+                                    <img src="images/circled-up-right.png" alt="" class="arrow">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="proj_card">
+                    <a href="https://brunos.kitchen">
+                        <div class="proj_con">
+                            <div class="dots">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                            </div>
+                            <div class="proj_img">
+                                <img src="images/brunos-kitchen.png" alt="">
+                            </div>
+                            <div class="proj_des">
+                                <div>
+                                    <h2>Brunos Kitchen</h2>
+                                    <p>Website Development</p>
+                                </div>
+                                <div>
+                                    <img src="images/circled-up-right.png" alt="" class="arrow">
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="proj_card">
                     <a href="https://www.strategykiln.com">
                         <div class="proj_con">
                             <div class="dots">
@@ -267,46 +336,50 @@
                     </div>
                 </div>
                 <div class="proj_card">
-                    <div class="proj_con">
-                        <div class="dots">
-                            <div class="dot"></div>
-                            <div class="dot"></div>
-                            <div class="dot"></div>
-                        </div>
-                        <div class="proj_img">
-                            <img src="images/booking-mockup.png" alt="">
-                        </div>
-                        <div class="proj_des">
-                            <div>
-                                <h2>Happy Nest</h2>
-                                <p>Website Development</p>
+                    <a href="https://github.com/MuhammadSarim18/happynest">
+                        <div class="proj_con">
+                            <div class="dots">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
                             </div>
-                            <div>
-                                <img src="images/circled-up-right.png" alt="" class="arrow">
+                            <div class="proj_img">
+                                <img src="images/booking-mockup.png" alt="">
+                            </div>
+                            <div class="proj_des">
+                                <div>
+                                    <h2>Happy Nest</h2>
+                                    <p>Website Development</p>
+                                </div>
+                                <div>
+                                    <img src="images/circled-up-right.png" alt="" class="arrow">
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="proj_card">
-                    <div class="proj_con">
-                        <div class="dots">
-                            <div class="dot"></div>
-                            <div class="dot"></div>
-                            <div class="dot"></div>
-                        </div>
-                        <div class="proj_img">
-                            <img src="images/wibe-mockup.png" alt="">
-                        </div>
-                        <div class="proj_des">
-                            <div>
-                                <h2>Wibe</h2>
-                                <p>Website Development</p>
+                    <a href="https://github.com/MuhammadSarim18/wibe">
+                        <div class="proj_con">
+                            <div class="dots">
+                                <div class="dot"></div>
+                                <div class="dot"></div>
+                                <div class="dot"></div>
                             </div>
-                            <div>
-                                <img src="images/circled-up-right.png" alt="" class="arrow">
+                            <div class="proj_img">
+                                <img src="images/wibe-mockup.png" alt="">
+                            </div>
+                            <div class="proj_des">
+                                <div>
+                                    <h2>Wibe</h2>
+                                    <p>Website Development</p>
+                                </div>
+                                <div>
+                                    <img src="images/circled-up-right.png" alt="" class="arrow">
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="proj_card">
                     <a href="https://muhammadsarim.netlify.app">
